# my-fitness-analyser

./: .gitignore  LICENSE  Makefile  README.md  RELEASE_NOTES.md  constants_functions.py  dashboard_run.py  my-fitness-analyser.code-workspace  pyproject.toml  requirements.txt  ruff.toml  style.css
.devcontainer/: devcontainer.json
.streamit/: config.toml
.streamlit/: config.toml
app_venv/: pyvenv.cfg
app_venv/Scripts/: activate  activate.bat
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
myfit/: __init__.py  __main__.py  activities.csv  app.py  constants_functions.py  dashboard_run.py  prova.csv  requirements.txt
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py
tests/unit/: conftest.py  test_version.py
